# FoundryTools-CLI-NG

./: .mypy.ini  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/commands/: cff.rst  cmap.rst  converter.rst  fix.rst  font.rst  gsub.rst  hhea.rst  name.rst  os2.rst  otf.rst  post.rst  print.rst  ttf.rst  utils.rst
src/foundrytools_cli_ng/: __main__.py
src/foundrytools_cli_ng/commands/assistant/: __init__.py  cli.py  styles_mapping.py
